eat(components): Scaffold structural blog card components
Introduces the initial HTML structure for a blog card list, based on a design from UI Design Daily. The focus of this commit is purely on component structure and data flow.

- Two new reusable components, `Card.astro` and `Author.astro`, have been created to define the semantic structure.
- A set of mock data has been added to simulate a list of blog post entries.
- The components are rendered on the page by passing the mock data as props.

Styling has been intentionally deferred to a future step to ensure the data and component architecture is sound before visual implementation.

Reference: https://www.uidesigndaily.com/posts/sketch-blog-cards-post-article-thumbnail-day-997

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
-
+import Card from "../components/Card.astro";
+import data from "../data/data.json";
 ---
 
 <!doctype html>
@@ -9,5 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body> HOME </body>
+  <body>
+    {data.map((card) => <Card data={card} />)}
+  </body>
 </html>
