feat(components): Introduce dynamic Heading component
Adds a flexible `Heading.astro` component capable of rendering different heading levels (e.g., <h1>, <h2>) from a single source.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Button from "../components/Button.astro";
+import Heading from "../components/Heading.astro";
 ---
 
 <!doctype html>
@@ -10,7 +11,7 @@ import Button from "../components/Button.astro";
     <title>Astro Components</title>
   </head>
   <body>
-    <h1>Astro Components</h1>
+    <Heading tag="h2" size="h5">Astro Components</Heading>
     <Button color="#333" id="my-id" aria-label="click me btn">Btn Text</Button>
   </body>
 </html>
