--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,4 +1,6 @@
 ---
+import { type HTMLAttributes } from "astro/types";
+
 const sizes = {
   h1: "h1",
   h2: "h2",
@@ -7,6 +9,13 @@ const sizes = {
   h5: "h5",
   h6: "h6",
 };
+
+
+interface Props extends HTMLAttributes<keyof typeof sizes> {
+  tag: keyof typeof sizes;
+  size: keyof typeof sizes;
+  classes?: string;
+}
 
 const { tag, size, ...rest } = Astro.props;
 const CustomTag = tag;
