efactor(config): Add import alias for src directory
Configures a path alias (`~/*`) in the `tsconfig.json` to point directly to the `src/` directory.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import PricingCard from "../components/PricingCard.astro";
-import cards from "../data/cardData.json";
+import PricingCard from "@/components/PricingCard.astro";
+import cards from "@/data/cardData.json";
 
-import "../styles/global.css";
+import "@/styles/global.css";
 ---
 
 <!doctype html>
