feat(content): Render Markdown content within a page
Demonstrates how to import and render the content from a single Markdown file into a specific location on an existing Astro page.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+import { Content as PromoBanner } from "../components/promoBanner.md";
 ---
 
 <!doctype html>
@@ -10,4 +10,5 @@
     <title>Document</title>
   </head>
   <body> HOME </body>
+  <PromoBanner />
 </html>
