feat(ui): Apply layout and initial styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,10 @@
 ---
+import BaseLayout from "../layouts/BaseLayout.astro";
+
 import { Content as PromoBanner } from "../components/promoBanner.md";
 ---
 
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body> HOME </body>
+<BaseLayout title="Home">
+  <h1>Homepage</h1>
   <PromoBanner />
-</html>
+</BaseLayout>
