feat(blog): Add first MDX post and link from index
Adds the first blog post created as an MDX file (`.mdx`) and updates the blog index page to ensure it's discoverable.

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -2,14 +2,14 @@
 import BaseLayout from "../../layouts/BaseLayout.astro";
 
 // Import a single file
-import * as myPost from "./post-1.md";
+import * as myPost from "./post-1.mdx";
 
 // Import multiple files with Astro.glob
 type Frontmatter = {
   title: string;
 };
 
-const posts = await Astro.glob<Frontmatter>("./*.md");
+const posts = await Astro.glob<Frontmatter>("./*.{md,mdx}");
 ---
 
 <BaseLayout title="Home">
