--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
+import { getCollection } from "astro:content";
 
+const teamData = await getCollection("team");
 ---
 
 <!doctype html>
@@ -9,5 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body> HOME </body>
+  <body>
+    <h1>Homepage</h1>
+    {teamData.map((p) => <p>{p.data.name}</p>)}
+  </body>
 </html>
