--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import { getCollection } from "astro:content";
 
 const teamData = await getCollection("team");
+const todos = await getCollection("todos");
 ---
 
 <!doctype html>
@@ -14,5 +15,8 @@ const teamData = await getCollection("team");
   <body>
     <h1>Homepage</h1>
     {teamData.map((p) => <p>{p.data.name}</p>)}
+    <ul>
+      {todos.map((t) => <li>{t.data.title}</li>)}
+    </ul>
   </body>
 </html>
