--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,13 @@ const posts = await getCollection("posts");
   <h1>Blog Posts</h1>
   <ul role="list">
     {
-      posts.map((post) => (
-        <li>
-          <a href={post.data.slug}>{post.data.title}</a>
-        </li>
-      ))
+      posts
+        .sort((a, b) => b.data.pubDate.getTime() - a.data.pubDate.getTime())
+        .map((post) => (
+          <li>
+            <a href={post.data.slug}>{post.data.title}</a>
+          </li>
+        ))
     }
   </ul>
 </BaseLayout>
