--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ const posts = await getCollection("posts");
         .sort((a, b) => b.data.pubDate.getTime() - a.data.pubDate.getTime())
         .map((post) => (
           <li>
-            <a href={post.data.slug}>{post.data.title}</a>
+            <a href={`/posts/${post.data.slug}`}>{post.data.title}</a>
           </li>
         ))
     }
