--- a/src/layout/BaseLayout.astro
+++ b/src/layout/BaseLayout.astro
@@ -16,6 +16,7 @@ const { title } = Astro.props;
     <nav>
       <a href="/">Home</a>
       <a href="/pokemon">Pokemon</a>
+      <a href="/products">Products</a>
     </nav>
     <main>
       <slot />
