--- a/src/layout/BaseLayout.astro
+++ b/src/layout/BaseLayout.astro
@@ -17,6 +17,7 @@ const { title } = Astro.props;
       <a href="/">Home</a>
       <a href="/pokemon">Pokemon</a>
       <a href="/products">Products</a>
+      <a href="/posts">Posts</a>
     </nav>
     <main>
       <slot />
