--- a/src/layout/BaseLayout.astro
+++ b/src/layout/BaseLayout.astro
@@ -18,6 +18,7 @@ const { title } = Astro.props;
       <a href="/pokemon">Pokemon</a>
       <a href="/products">Products</a>
       <a href="/posts">Posts</a>
+      <a href="/contacts">Contacts</a>
     </nav>
     <main>
       <slot />
