--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseHead from "@/layouts/BaseHead.astro";
+import Footer from "@/layouts/Footer.astro";
 
 import "@/styles/global.css";
 ---
@@ -11,5 +12,6 @@ import "@/styles/global.css";
     <main>
       <slot />
     </main>
+    <Footer />
   </body>
 </html>
