--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import BaseHead from "@/layouts/BaseHead.astro";
 import Footer from "@/layouts/Footer.astro";
+import Nav from "@/layouts/Nav.astro";
 
 import "@/styles/global.css";
 ---
@@ -9,6 +10,7 @@ import "@/styles/global.css";
 <html lang="en">
   <BaseHead {...Astro.props} />
   <body>
+    <Nav />
     <main>
       <slot />
     </main>
