--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,13 +1,19 @@
 ---
 import katie from "@/assets/avatar.jpeg";
 import Heading from "@/components/ui/Heading.astro";
+import Link, { type LinkProps } from "@/components/ui/Link.astro";
+
+interface Link extends LinkProps {
+  name: string;
+}
 
 const links = [
   {
     href: "/katie-haus-cv.pdf",
     name: "Download CV",
+    variant: "secondary",
   },
-];
+] satisfies Link[];
 ---
 
 <section aria-label="Hero section" class="hero">
@@ -17,9 +23,9 @@ const links = [
   <div class="columns">
     {
       links.map((l) => (
-        <a href={l.href} class="link">
+        <Link href={l.href} variant={l.variant}>
           {l.name}
-        </a>
+        </Link>
       ))
     }
   </div>
