--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Hero from "@/components/Hero.astro";
+import Projects from "@/components/home/Projects.astro";
 import WhyWorkWithMe from "@/components/home/WhyWorkWithMe.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
@@ -7,4 +8,5 @@ import Layout from "@/layouts/Layout.astro";
 <Layout>
   <Hero />
   <WhyWorkWithMe />
+  <Projects />
 </Layout>
