--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -7,9 +7,10 @@ import FormattedDate from "@/ui/FormattedDate.astro";
 
 type Props = {
   post: CollectionEntry<"blogPosts">;
+  tagName: "h2" | "h3";
 };
 
-const { post } = Astro.props;
+const { post, tagName } = Astro.props;
 const { title, image, description, pubDate } = post.data;
 const author = await getEntry(post.data.author.collection, post.data.author.id);
 ---
@@ -17,7 +18,7 @@ const author = await getEntry(post.data.author.collection, post.data.author.id);
 <article aria-label={title} class="blog-card">
   <img src={image.src} width={400} height={225} alt="" />
   <div class="rows">
-    <Heading tagName="h2" tagSize="h3">{title}</Heading>
+    <Heading tagName={tagName} tagSize="h3">{title}</Heading>
     <div class="columns">
       <FormattedDate pubDate={pubDate} />
       {author && <small>by {author.data.name}</small>}
