refactor(components): Organize project components into project subdirectory
Moves the `ProjectCard.astro` and `Projects.astro` components from the main `components/` directory into a new `components/project/` subdirectory.

This change improves project organization by grouping components that are specific to the project feature. All relevant import paths have been updated accordingly.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import { getCollection } from "astro:content";
 
 import Hero from "@/components/Hero.astro";
-import Projects from "@/components/Projects.astro";
+import Projects from "@/components/project/Projects.astro";
 import WhyWorkWithMe from "@/components/home/WhyWorkWithMe.astro";
 import Heading from "@/components/ui/Heading.astro";
 import BlogCard from "@/components/blog/BlogCard.astro";
