--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,5 +1,5 @@
 ---
-import ProjectWrapper from "@/components/Projects.astro";
+import ProjectWrapper from "@/components/project/Projects.astro";
 import Heading from "@/components/ui/Heading.astro";
 import Layout from "@/layouts/Layout.astro";
 ---
