--- a/src/components/project/Projects.astro
+++ b/src/components/project/Projects.astro
@@ -7,9 +7,10 @@ const projects = await getCollection("projects");
 
 type Props = {
   limit?: number;
+  tagName: "h2" | "h3";
 };
 
-const { limit } = Astro.props;
+const { limit, tagName } = Astro.props;
 ---
 
 <div class="grid-wrapper">
@@ -17,7 +18,7 @@ const { limit } = Astro.props;
     limit
       ? projects
           .slice(0, limit)
-          .map((project) => <ProjectCard project={project} />)
-      : projects.map((project) => <ProjectCard project={project} />)
+          .map((project) => <ProjectCard project={project} tagName={tagName} />)
+      : projects.map((project) => <ProjectCard project={project} tagName={tagName} />)
   }
 </div>
