--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -7,6 +7,6 @@ import Layout from "@/layouts/Layout.astro";
 <Layout title="My Recent Projects">
   <div class="container rows">
     <Heading tagName="h1" tagSize="h1">Latest Projects</Heading>
-    <ProjectWrapper />
+    <ProjectWrapper tagName="h2" />
   </div>
 </Layout>
