--- a/src/components/blog/BlogCard.astro
+++ b/src/components/blog/BlogCard.astro
@@ -4,6 +4,7 @@ import type { CollectionEntry } from "astro:content";
 import { getEntry } from "astro:content";
 import Heading from "@/ui/Heading.astro";
 import FormattedDate from "@/ui/FormattedDate.astro";
+import Link from "@/ui/Link.astro";
 
 type Props = {
   post: CollectionEntry<"blogPosts">;
@@ -11,7 +12,7 @@ type Props = {
 };
 
 const { post, tagName } = Astro.props;
-const { title, image, description, pubDate } = post.data;
+const { title, image, slug, description, pubDate } = post.data;
 const author = await getEntry(post.data.author.collection, post.data.author.id);
 ---
 
@@ -24,5 +25,6 @@ const author = await getEntry(post.data.author.collection, post.data.author.id);
       {author && <small>by {author.data.name}</small>}
     </div>
     <p>{description}</p>
+    <Link href={`/blog/${slug}`}>Read Post</Link>
   </div>
 </article>
