--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -11,6 +11,7 @@ const { title = baseData.title, description = baseData.description } = Astro.pro
   <meta name="generator" content={Astro.generator} />
   <title>{title}</title>
   <meta name="description" content={description} />
+  <link rel="sitemap" href="/sitemap-index.xml" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
