feat(blog): Add AuthorCard to single post pages
Introduces a new `AuthorCard.astro` component and adds it to the bottom of every single blog post page.

The `AuthorCard` provides a brief bio of the author and includes a prominent call-to-action link that directs users to the new contact form section on the homepage. This enhances the post pages with a personal touch and encourages user engagement.

--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -7,6 +7,7 @@ import Layout from "@/layouts/Layout.astro";
 import { getEntry } from "astro:content";
 import { getCollection } from "astro:content";
 import { render } from "astro:content";
+import AuthorCard from "@/components/blog/AuthorCard.astro";
 
 export const getStaticPaths = (async () => {
   const posts = await getCollection("blogPosts", ({ data }) => !data.isDraft);
@@ -42,4 +43,5 @@ const author = await getEntry(post.data.author.collection, post.data.author.id);
   <section aria-label="Blog content" class="blog-content">
     <Content />
   </section>
+  <AuthorCard />
 </Layout>
