feat(assets): Demonstrate 'quality' attribute on Image component
Showcases the use of the `quality` attribute on Astro's built-in `<Image>` component to manually control the compression level of a processed image.

This commit updates an existing `<Image>` component to include the `quality` attribute, providing a practical example of how to fine-tune the trade-off between file size and visual quality for specific images.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,6 +16,6 @@ import Katie from "../assets/image.jpg";
     <p>Public Image</p>
     <img src="/image.jpg" alt="Katie Haus" />
     <p>Assets Image</p>
-    <Image width={40} format="avif" src={Katie} alt="Katie Haus" />
+    <Image width={40} format="avif" quality="mid" src={Katie} alt="Katie Haus" />
   </body>
 </html>
