--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import Katie from "../assets/image.jpg";
+import ReactWrapper from "../components/ReactWrapper";
 ---
 
 <html lang="en">
@@ -16,6 +17,8 @@ import Katie from "../assets/image.jpg";
     <p>Public Image</p>
     <img src="/image.jpg" alt="Katie Haus" />
     <p>Assets Image</p>
-    <Image width={40} format="avif" quality="mid" src={Katie} alt="Katie Haus" />
+    <ReactWrapper>
+      <Image width={40} format="avif" quality="mid" src={Katie} alt="Katie Haus" />
+    </ReactWrapper>
   </body>
 </html>
